sync: cherry-pick changes from feature/3.0.x